tests/m1/negative/private_reexport_import.ax
module private_reexport_import;

import m1lib.private_facade;

fn main() -> i32 {
    let value: Count = local_use();
    return value;
}

